_inf/k8s/dpy_cadence.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpy-ketzv1-cadence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ketzv1-cadence
  template:
    metadata:
      labels:
        app: ketzv1-cadence
    spec:
      containers:
        - name: ketzv1-cadence
          image: us.gcr.io/vdbx-dev/cadence
---
apiVersion: v1
kind: Service
metadata:
  name: serv-ketzv1-cadence
spec:
  selector:
    app: ketzv1-cadence
  ports:
  - name: ketzv1-cadence
    protocol: TCP
    port: 9997
    targetPort: 9997
